@@ -1,4 +1,5 @@
 DIST jackmix-0.4.2.tar.gz 40156 SHA256 617d54077797fb4bcc3bcf0eb5ea4041aba3c4ecea0a9d8187274c86c4a5997b SHA512 70296dc849e25638ad76b0541fa8bf27c08c3e9db1f755ef9e29d6ff882e88711b67888becc1643a0eef5c898cb3178a2a2270f7d169e13c7812375d954919b7 WHIRLPOOL 86fd6b8fbbec4fb3600274792964c57f8bff2b9badbceb5d8594dc0cc056e3897235521853750687911022723576be3eca4f2c1c311fdfede0e83e9feff0b381
+EBUILD jackmix-0.4.2-r1.ebuild 961 SHA256 a36b836525644f262287bb955b0c10dea3bd5379770dd64552e9dbc4e2f785d4 SHA512 4733be08bf7900293a85ca6e86cf9b843ddd407f625e0d14f27f48a2410724da375748b9ddf00f92fa7908f609687baa94757c52a4a7ee709ec8dcfc7009a96c WHIRLPOOL a9265dfd9889c789838ea2aa4b31075f3cf6bbc46e928a480d4f070ede7481efe4a89a9070a6063b1621da4e21f976ac0719649177335cb073c19cca25b25cff
 EBUILD jackmix-0.4.2.ebuild 948 SHA256 bcc0cb5a75b82bf338ec04468d87483ab07898c2f5a24b7c1266d701c4379875 SHA512 c52c70a86751cb1205e4b2a5a97b24e72a09875847df98846c0d4c5ce3938d802df7c654ae1cb882093e162faa26107d3ea02dbe88a030016b65c4ba45bfd197 WHIRLPOOL c092927dd420f0adf2d587c4aceeb742ad4164df4e775dee5e7a858e1a4ac0aabb53e93ce83a229e65cd7cdf3442875f08200ac694d4aeecfee912a265a630da
-MISC ChangeLog 1122 SHA256 3f5003c5ffacdfb35f7fa7d2401022600217ada8bab4c7eb356c792d7872d521 SHA512 a883f6b58147a9742d39ddbdc79b0c40e99fb29f48e99e63efc0efcb9731fe46941139e0c1a2ce05630854ae0ee39461585de005b659061018d72fb0e0894584 WHIRLPOOL 1c8e611d0e775cd0c89f3806e8356997a75eb73d067487ed3b45102f4cbfcd10f9d04b13a2692215efe4f69e61f0674d804683bcef9bb47a0df6ccecb2076a36
+MISC ChangeLog 1366 SHA256 c0e4d246239c3c9206ab3c321ade829cda68cc62b002decc49cddf64090d1097 SHA512 fa5f28afc9afd38a65a73d3d236eaf1ddda11303cec8f42348beeb920e2c860ba0580129f69e6ea44ce013157c0a9ebc3161927edfaebe5370f6dc5a7ea953fa WHIRLPOOL 2313ff7ca59ca2ffc565a322ae5a9364f26325ae2b0fab11661687b324f105e1d322168aec8d5c1d1796e341b44b38ccd37c249fb64d31db6b723fa63d71ca49
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
